# example

./: .clang-format  CMakeLists.txt
src/main/: CMakeLists.txt  example1-main.cpp  example2-main.cpp
src/static-library/: CMakeLists.txt  static-library-example1.cpp  static-library-example1.h  static-library-example2.cpp  static-library-example2.h
